@@ -211,3 +211,6 @@ set args --xml -o - $ttests/alias.tex
 
 # warn if @strong{Note:}.
 set args -o - $ttests/markup.tex
+
+# @xml produces <para>.
+set args --xml -o - $ttests/xmlpara.tex
